--- a/index.html
+++ b/index.html
@@ -1,10 +1,98 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>ISH4NFX</title>
+  <meta charset="UTF-8">
+  <title>ISH4NFX | Video Editor</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, Helvetica, sans-serif;
+      background: radial-gradient(circle at top, #0f2d2a, #000);
+      color: #e5e5e5;
+      text-align: center;
+    }
+
+    header {
+      padding: 80px 20px;
+    }
+
+    header h1 {
+      font-size: 42px;
+      color: #00ffcc;
+      margin-bottom: 10px;
+    }
+
+    header h2 {
+      font-weight: normal;
+      color: #b5b5b5;
+      margin-bottom: 30px;
+    }
+
+    .buttons a {
+      display: inline-block;
+      margin: 10px;
+      padding: 14px 28px;
+      border-radius: 30px;
+      text-decoration: none;
+      font-weight: bold;
+      color: #000;
+      background: #00ffcc;
+      transition: 0.3s;
+    }
+
+    .buttons a.outline {
+      background: transparent;
+      color: #00ffcc;
+      border: 2px solid #00ffcc;
+    }
+
+    .buttons a:hover {
+      transform: scale(1.05);
+    }
+
+    .profile {
+      margin-top: 40px;
+    }
+
+    .profile img {
+      width: 180px;
+      height: 180px;
+      border-radius: 50%;
+      border: 4px solid #00ffcc;
+      object-fit: cover;
+    }
+
+    footer {
+      margin-top: 60px;
+      font-size: 14px;
+      color: #777;
+    }
+  </style>
 </head>
-<body style="background:black; color:white; text-align:center;">
-  <h1>Welcome to ISH4NFX</h1>
-  <p>Anime Editor | Creator</p>
+
+<body>
+
+  <header>
+    <h1>Hey, I'm ISH4NFX</h1>
+    <h2>Short-Form Video Editor</h2>
+
+    <p>Creating scroll-stopping edits that grab attention in seconds.</p>
+
+    <div class="buttons">
+      <a href="#">Explore My Work</a>
+      <a href="#" class="outline">Contact Me</a>
+    </div>
+
+    <div class="profile">
+      <img src="https://i.imgur.com/0y0y0y0.png" alt="ISH4NFX">
+    </div>
+  </header>
+
+  <footer>
+    © 2026 ISH4NFX · All Rights Reserved
+  </footer>
+
 </body>
 </html>
